@@ -6,7 +6,6 @@
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+ExitOnOutOfMemoryError
 -XX:+UseG1GC
--XX:-UseBiasedLocking
 -XX:ReservedCodeCacheSize=256M
 -XX:PerMethodRecompilationCutoff=10000
 -XX:PerBytecodeRecompilationCutoff=10000
